LSP-1745 pass --enable-preview to a launch of a preview-level module
A Maven module that compiles with `--enable-preview` imports at a preview
language level. Such a module launches as a plain `java` process, because no
single `mvn` invocation can both build the reactor and exec one module. That
launch carried no VM arguments, so the JVM refused the classes Maven had just
compiled, with `UnsupportedClassVersionError`.

`intellij.java.resolveLaunch` now also answers `vmArgs`. It derives the flag
like `JavaParameters.configureByModule`, but over the whole runtime closure,
because the classes the JVM refuses are the ones it loads. It leaves out that
one's check for a JDK of version 11 or later. The lowest preview language level
is 17, so an older JDK cannot load such classes either.

`vmArgs` merges instead of overrides. The project owns `--enable-preview` and
the user owns every other argument. The client therefore sends its own
arguments with the request and writes the whole answer back. An argument that
is already present is never added again. A server that predates the field
leaves the client's arguments alone.

A launch through a build tool is unchanged. A Gradle module gets its JVM
arguments from the build script (LSP-1702).

Tests: a new JPS fixture holds a preview module and a plain module that depends
on it. `LspResolveLaunchTest` covers both launches, a project with no preview
code, and the merge with a configured argument.

GitOrigin-RevId: 8c48c46387459dd62fb42380cb0206e9d72998ca